# AES-GCM-Engine

./: .gitignore  AES.cpp  CMakeLists.txt  GCM.cpp  GCM_MPI.cpp  GCM_OpenMP.cpp  Ghash.cpp  Ghash.h  KeyExpansion.cpp  MixColumns.cpp  OCB-OpenMp.cpp  OCB.cpp  README.md  ShiftRows.cpp  SubBytes.cpp  Utils.cpp  Utils.h  gcm  gcm_mpi  gcm_openMp  qa
CudaC/: GCM.cu  Ghash.cpp  Utils.cpp  Utils.h  aes.c  aes.h  kernelsGCM.cu  kernelsGCM.h
aes_stages/: InverseMixColumns.cpp  InverseShiftRows.cpp  InverseSubBytes.cpp  KeyExpansion.cpp  MixColumns.cpp  ShiftRows.cpp  SubBytes.cpp
